// ***********************************************************************
// Assembly         : WireConfig
// Author           : jiatli93
// Created          : 12-10-2020
//
// Last Modified By : jiatli93
// Last Modified On : 12-11-2020
// ***********************************************************************
// <copyright file="FieldType.cs" company="Red Clay">
//     ${AuthorCopyright}
// </copyright>
// <summary></summary>
// ***********************************************************************

namespace WireConfig
{
    /// <summary>
    ///     Enum FieldType
    /// </summary>
    public enum FieldType
    {
        /// <summary>
        ///     The system
        /// </summary>
        System,

        /// <summary>
        ///     The custom
        /// </summary>
        Custom
    }
}